// internal/api-gateway/grpc_client/auth_client.go (Yeni dosya)

package grpc_client

import (
	"context"
	"log"
	"time"

	// Kendi oluÅŸturduÄŸunuz proto paketini import edin
	pb "marketplace/pkg/proto/auth"

	"google.golang.org/grpc"
	"google.golang.org/grpc/credentials/insecure"
)

// Ä°stemciyi uygulamada global olarak eriÅŸilebilir tutmak iÃ§in.
var AuthValidatorClient pb.AuthValidatorClient

// User Servisine olan baÄŸlantÄ±yÄ± temsil eder.
var conn *grpc.ClientConn

// Gateway uygulamasÄ± baÅŸlangÄ±cÄ±nda Ã§aÄŸrÄ±lacak fonksiyon
func InitAuthClient(grpcAddress string) error {
	var err error

	// GÃ¼venliksiz baÄŸlantÄ± (Genellikle internal mikroservisler iÃ§in kabul edilebilir)
	conn, err = grpc.Dial(grpcAddress, grpc.WithTransportCredentials(insecure.NewCredentials()))
	if err != nil {
		return err
	}

	// BaÄŸlantÄ± Ã¼zerinden gRPC istemcisini oluÅŸturun
	AuthValidatorClient = pb.NewAuthValidatorClient(conn)
	log.Printf("âœ… Gateway, User Servisine gRPC ile baÄŸlandÄ±: %s", grpcAddress)
	return nil
}

// Uygulama kapanÄ±rken baÄŸlantÄ±yÄ± kapatmak iÃ§in
func CloseAuthClient() {
	if conn != nil {
		conn.Close()
	}
}

// AuthMiddleware'in Ã§aÄŸÄ±racaÄŸÄ± ana doÄŸrulama fonksiyonu
func ValidateToken(token string) (isValid bool, userID string, permissions int64) {
	// 3 saniyelik timeout ile bir context oluÅŸturun
	ctx, cancel := context.WithTimeout(context.Background(), time.Second*3)
	defer cancel()

	req := &pb.TokenRequest{Token: token}

	// User Servisindeki gRPC metodunu Ã§aÄŸÄ±rÄ±n
	resp, err := AuthValidatorClient.ValidateToken(ctx, req)

	if err != nil {
		log.Printf("ğŸ”’ gRPC doÄŸrulama Ã§aÄŸrÄ±sÄ± baÅŸarÄ±sÄ±z: %v", err)
		return false, "", 0
	}

	// Geri dÃ¶nen cevabÄ± kontrol edin
	return resp.GetIsValid(), resp.GetUserId(), resp.GetPermissions()
}
